tests/success/struct_indirect_self_pointer_member.bz
struct T
{
	.s: S;
}

struct S
{
	.t: *T;

	function foo(self: S)
	{
		__builtin_destruct_value(*self.t);
	}
}
