tests/error/rvalue_member_access.bz
struct test_t
{
	.a: int32;

	destructor(&self);
}

function test()
{
	test_t().a;
}
